--- a/style.css
+++ b/style.css
@@ -232,20 +232,9 @@ body {
     padding: 1rem;
 }
 
-/* Project Details Section (SOLUCIÓN) */
-.project-detail-section .project-images {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-}
-
-.project-detail-section .project-images img {
-    width: 100%; /* Las imágenes ocuparán todo el ancho en móvil */
-    max-width: 400px; /* Tamaño máximo para desktop */
-    height: auto;
-    border-radius: 5px;
+/* Project Details Section */
+.project-detail-section {
+    padding-top: 4rem;
 }
 
 .project-card {
@@ -253,6 +242,19 @@ body {
     padding: 2rem;
     margin-bottom: 2rem;
     border-radius: 8px;
+}
+
+.project-images {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+.project-images img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
 }
 
 .project-card h3 {
@@ -336,5 +338,14 @@ body {
     .hero-images {
         flex-direction: column;
         align-items: center;
+    }
+    /* SOLUCION PARA IMAGENES DE PROYECTO EN MOVIL */
+    .project-detail-section .project-images {
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    .project-detail-section .project-images img {
+        width: 90%; /* Ajuste a 90% para dejar un pequeño margen */
+        max-width: 400px;
     }
 }
